# E-Commernce

./: .gitignore  CMakeLists.txt  README.md  go.mod  index.html  main.go  script.js  style.css
.cache/clangd/index/: main.cc.007457161F6F80FA.idx
About Us Page/: about.css  about.html
Home Page/: home.html  home.js  index.html  style.css
Products Page/: ourproducts.css  ourproducts.js  ourproucts.html
src/: main.cc
